--- a/server/package.json
+++ b/server/package.json
@@ -13,22 +13,22 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "@prisma/client": "^7. 1.0",
+    "bcryptjs": "^2. 4.3",
+    "cors": "^2.8. 5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4. 18.2",
+    "jsonwebtoken": "^9. 0.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.20",
+    "@types/jsonwebtoken": "^9.0. 5",
+    "@types/node": "^20.11. 20",
     "nodemon": "^3.1.0",
-    "prisma": "^5.10.0",
+    "prisma": "^7.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
