--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@prisma/client": "7.1.0",
+    "@prisma/client": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -28,7 +28,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.20",
     "nodemon": "^3.1.0",
-    "prisma": "7.1.0",
+    "prisma": "^6.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
