--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.13"
+    "@aws-sdk/client-s3": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
