--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.0.0",
     "@prisma/client": "6.19.0",
+    "aws4": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -22,10 +22,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/aws4": "^1.11.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.17",
