feat: Add email verification for new user registrations and implement password reset functionality.

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,3 +17,7 @@ SPACES_BUCKET="your-bucket-name"
 SPACES_KEY="your-access-key"
 SPACES_SECRET="your-secret-key"
 SPACES_CDN_URL="https://your-bucket.sgp1.cdn.digitaloceanspaces.com"
+
+# Resend Email Service
+RESEND_API_KEY="re_xxxxxxxxxx"
+FRONTEND_URL="http://localhost:5173"
