--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "resend": "^6.6.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
