--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.946.0",
+    "i18next": "^25.7.3",
     "konva": "^10.0.12",
     "lucide-react": "^0.555.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "react-konva": "^19.2.1",
     "react-router-dom": "^7.10.1",
     "xlsx": "latest"
