--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "lru-cache": "^11.2.4",
     "multer": "^1.4.5-lts.1",
     "resend": "^6.6.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.11.20",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
