--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "npx prisma generate && tsc",
-    "start": "npx prisma db push --skip-generate && node dist/index.js",
-    "start:prod": "node dist/index.js",
+    "start": "node dist/index.js",
+    "db:push": "npx prisma db push",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
   },
