--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "lru-cache": "^11.2.4",
     "multer": "^1.4.5-lts.1",
     "resend": "^6.6.0",
+    "rss-parser": "^3.13.0",
     "uuid": "^13.0.0",
     "youtube-transcript": "^1.2.1",
     "yt-dlp-wrap": "^2.3.12",
