--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.22.0",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "aws4": "^1.13.2",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
@@ -23,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "get-youtube-id": "^1.0.1",
     "googleapis": "^169.0.0",
     "jsonwebtoken": "^9.0.2",
