feat: implement Hybrid AI Strategy (SiliconFlow ASR + GPT-4o-mini Analysis)

--- a/server/.env.example
+++ b/server/.env.example
@@ -18,6 +18,12 @@ SPACES_KEY="your-access-key"
 SPACES_SECRET="your-secret-key"
 SPACES_CDN_URL="https://your-bucket.sgp1.cdn.digitaloceanspaces.com"
 
+# SiliconFlow API (OpenAI Compatible)
+SILICONFLOW_API_KEY="sk-xxxxxxxxxxxxxxxxxxxxxxxx"
+
+# OpenAI API (for GPT-4o-mini)
+OPENAI_API_KEY="sk-xxxxxxxxxxxxxxxxxxxxxxxx"
+
 # Resend Email Service
 RESEND_API_KEY="re_xxxxxxxxxx"
 FRONTEND_URL="http://localhost:5173"
