--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "get-youtube-id": "^1.0.1",
+    "google-auth-library": "^10.5.0",
     "googleapis": "^169.0.0",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.2.4",
