--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "node-webvtt": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.5.0",
     "react-konva": "^19.2.1",
     "react-router-dom": "^7.10.1",
     "react-youtube": "^10.1.0",
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
-    "xlsx": "latest"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
